[package]
name = "byteview"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.94", features = ["span-locations"] }
quote = "1.0.40"
syn = { version = "2.0.100", features = ["extra-traits", "full", "parsing"] }

[dev-dependencies]
chrono = { version = "0.4.40", features = ["alloc"] }
zerocopy = { version = "0.8.25", features = ["alloc", "std"] }
zerocopy-derive = "0.8.25"
